Fix Draggable line shifting issue

--- a/src/components/Draggable.module.css
+++ b/src/components/Draggable.module.css
@@ -19,10 +19,11 @@
 
 .imgWrapper {
   position: relative;
+  display: inline-block;
   width: 100%;
   height: auto;
   aspect-ratio: 720/550;
-  max-width: 800px;
+  /* max-width: 800px; */
   max-height: 90vh;
 }
 
@@ -63,7 +64,7 @@
   left: 50%;
   background-color: white;
   z-index: 10;
-  transform: translateX(-50%);
+  /* transform: translateX(-50%); */
   pointer-events: none;
 }
 
@@ -88,8 +89,6 @@
 
 @media (max-width: 768px) {
   .container {
-    /* width: calc(90vw - 2rem); */
     max-width: 90vw;
-    /* padding: 0 1rem; */
   }
 }
